# HomeWorkCPP881

./: CMakeLists.txt  database.cpp  database.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
